--- a/src/app/pages/home/vista-productos/vista-productos.component.html
+++ b/src/app/pages/home/vista-productos/vista-productos.component.html
@@ -19,7 +19,7 @@
       *ngFor="let c of mainCategories"
       (click)="idSelected = c.id_category; setInformationForOneCategory()"
     >
-      <div>
+      <div class="categories">
         <p>{{ c.name_category }}</p>
       </div>
     </swiper-slide>
